Fixed scroll not being disabled on mobile devices on modal/menu opening

--- a/src/assets/styles/base.scss
+++ b/src/assets/styles/base.scss
@@ -7,6 +7,7 @@
 html {
   -webkit-font-smoothing: antialiased;
   overflow-y: scroll; /* 1 */
+  height: 100%;
 }
 
 body {
@@ -15,6 +16,7 @@ body {
   line-height: $line-height;
   letter-spacing: $letter-spacing;
   overflow-x: hidden;
+  height: 100%;
 }
 
 svg {
